--- a/McLabel/McLabel.csproj
+++ b/McLabel/McLabel.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Services\Interfaces\IFileService.cs" />
     <Compile Include="Services\ViewNavigationService.cs" />
     <Compile Include="Services\XmlFileService.cs" />
+    <Compile Include="Utils\Converters\ReversedBooleanToVisibiltyConverter.cs" />
     <Compile Include="Utils\Extensions\CollectionExtensions.cs" />
     <Compile Include="Utils\Registrators\ServiceRegistrator.cs" />
     <Compile Include="Utils\Registrators\ViewModelRegistrator.cs" />
