--- a/McLabel/McLabel.csproj
+++ b/McLabel/McLabel.csproj
@@ -223,6 +223,7 @@
     <Compile Include="Services\XmlFileService.cs" />
     <Compile Include="Utils\Converters\DateTimeConverter.cs" />
     <Compile Include="Utils\Converters\ReversedBooleanToVisibiltyConverter.cs" />
+    <Compile Include="Utils\Converters\StringVisibilityConverter.cs" />
     <Compile Include="Utils\Extensions\CollectionExtensions.cs" />
     <Compile Include="Utils\Registrators\ServiceRegistrator.cs" />
     <Compile Include="Utils\Registrators\ViewModelRegistrator.cs" />
