--- a/McLabel/McLabel.csproj
+++ b/McLabel/McLabel.csproj
@@ -216,6 +216,8 @@
     <Compile Include="Commands\Base\CommandBase.cs" />
     <Compile Include="Commands\RelayCommand.cs" />
     <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Interfaces\ICategory.cs" />
+    <Compile Include="Models\Interfaces\IItem.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Services\FileDialogService.cs" />
     <Compile Include="Services\Interfaces\IFileService.cs" />
