--- a/McLabel/packages.config
+++ b/McLabel/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FontAwesome5" version="2.1.11" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="7.0.0" targetFramework="net48" />
