--- a/McLabel/McLabel.csproj
+++ b/McLabel/McLabel.csproj
@@ -314,6 +314,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="icon.ico" />
